# NetologyDiplom

./: .gitignore  CMakeLists.txt  config.ini
crawler/: main.cpp
